--- a/index.html
+++ b/index.html
@@ -88,7 +88,44 @@
                 </div>
             </div>
         </section>
+        <section class="section__blackwidow">
+            <div class="container">
+                <img src="images/blackwidow.png" alt="">
+                <p class="main__blackwidow-text">After the events at the Leipzig-Halle airport, Natasha was overtaken by the mistakes of the past. The Red Room again made itself felt - a program to create Widows - professional killers and spies - just like her. Natasha decides once and for all to deal with people whose efforts she herself became a Widow.</p>
+                <a href="#!" class="btn main__blackwidow-btn">Watch now</a>
+            </div>
+            <div class="main__blackwidow-video">
+                <video src="video/Marvel Studios' Black Widow _ Big Game Spot.mp4" autoplay muted loop class="main__blackwidow-film"></video>
+            </div>
+        </section>
+        <section class="section__collections">
+            <div class="container">
+                <h2 class="title">Collections</h2>
+                <div class="main__collections">
+                    <div class="main__collections-item">
+                        <img src="images/marvel.jpg" alt="" class="main__collections-img">
+                        <div class="main__collections-info">
+                            <i class="fa-solid fa-play main__collections-icon" ></i>
+                            <div class="main__collections-title">All Marvel Films</div>
+                        </div>
+                    </div>
+                    <div class="main__collections-item">
+                        <img src="images/fast_furious.jpg" alt="" class="main__collections-img">
+                        <div class="main__collections-info">
+                            <i class="fa-solid fa-play main__collections-icon" ></i>
+                            <div class="main__collections-title">Fast and the Furious</div>
+                        </div>
+                    </div>
+                    <div class="main__collections-item">
+                        <img src="images/980e091060d66cf4790f36906ad8e8ae.jpg" alt="" class="main__collections-img">
+                        <div class="main__collections-info">
+                            <i class="fa-solid fa-play main__collections-icon" ></i>
+                            <div class="main__collections-title">Star Wars</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    
 </body>
 </html>
