--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <img src="images/logo.png" alt="">
                         <span>CINEMAS</span>
                         <ul class="header__nav-list">
-                            <li><a href="#!" class="header__nav-link">Films</a></li>
-                            <li><a href="#!" class="header__nav-link">Serials</a></li>
+                            <li><a href="#films" class="header__nav-link">Films</a></li>
+                            <li><a href="#serials" class="header__nav-link">Serials</a></li>
                             <li><a href="#!" class="header__nav-link">Cartoons</a></li>
-                            <li><a href="#!" class="header__nav-link">Collections</a></li>
+                            <li><a href="#collections" class="header__nav-link">Collections</a></li>
                         </ul>
                     </a>
                 </div>
@@ -47,7 +47,7 @@
     <main class="main">
         <section class="section__films">
             <div class="container">
-                <h2 class="title section__films-title">films</h2>
+                <h2 class="title section__films-title" id="films">films</h2>
                 <div class="main__films">
                     <div class="main__films-item">
                         <img src="images/Black_Panther_film_poster 1.jpg" alt="" class="main__films-img">
@@ -98,7 +98,7 @@
                 <video src="video/Marvel Studios' Black Widow _ Big Game Spot.mp4" autoplay muted loop class="main__blackwidow-film"></video>
             </div>
         </section>
-        <section class="section__collections">
+        <section class="section__collections" id="collections">
             <div class="container">
                 <h2 class="title">Collections</h2>
                 <div class="main__collections">
@@ -126,6 +126,57 @@
                 </div>
             </div>
         </section>
+        <section class="section__series" id="serials">
+            <div class="container">
+                <h2 class="title">Series</h2>
+                <div class="section__series-catolog">
+                    <div class="section__series-item">
+                        <img src="images/game_of_thrones.jpg" class="section__series-img" alt="">
+                        <h2 class="section__series-title">Game of Thrones</h2>
+                        <p class="section__series-text">The time of prosperity is drawing to a close, and the summer, which lasted almost a decade, is dying away. Around the center of power of the Seven Kingdoms, the Iron Throne, a conspiracy is ripening, and during this difficult time, the king decides to seek support from his youth friend Eddard Stark. In a world where everyone - from the king to the mercenary - is eager for power, intrigues and is ready to stick a knife in the back, there is ...</p>
+                        <a href="#!" class="btn">Watch now</a>
+                    </div>
+                    <div class="section__series-item">
+                        <img src="images/wanda_vision.jpg" class="section__series-img" alt="">
+                        <i class="fa-solid fa-play section__series-icon" ></i>
+                        <h2 class="section__series-title">Wanda Vision</h2>
+                    </div>
+                    <div class="section__series-item">
+                        <img src="images/flash.jpg" class="section__series-img" alt="">
+                        <i class="fa-solid fa-play section__series-icon" ></i>
+                        <h2 class="section__series-title">The Flash</h2>
+                    </div>
+                    <div class="section__series-item">
+                        <img src="images/great.jpg" class="section__series-img" alt="">
+                        <i class="fa-solid fa-play section__series-icon" ></i>
+                        <h2 class="section__series-title">The Great</h2>
+                    </div>                    
+                    <div class="section__series-item">
+                        <img src="images/gotem.png" class="section__series-img" alt="">
+                        <i class="fa-solid fa-play section__series-icon" ></i>
+                        <h2 class="section__series-title">GOTHAM</h2>
+                    </div>
+                    <div class="section__series-item">
+                        <img src="images/witcher.jpg" class="section__series-img" alt="">
+                        <i class="fa-solid fa-play section__series-icon" ></i>
+                        <h2 class="section__series-title">The witcher</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-box">
+                <div class="footer__left">
+                    <img src="images/playmarket.png" alt="" class="footer__left-img">
+                    <img src="images/applestore.png" alt="" class="footer__left-img">
+                </div>
+                <div class="footer__right">
+                    <p class="footer__right-text">Made by <a href="https://github.com/Djohnny11" class="link__to-github">Djohnny11</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
